[build-system]
requires = ["setuptools>=45", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "walnutpi_csi"
version = "1.0.0"
description = "A module to capture the csi camera on walnutpi board"
readme = "README.md"
license = "MIT"
authors = [
    { name = "sc-bin", email = "3335447573@qq.com" },
]
# 添加依赖信息
dependencies = ["numpy", "opencv-contrib-python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/sc-bin/"